Добавлен черновик входной секции

--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
       </address>
     </header>
     <main>
-      <section class="cover"></section>
+      <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover__title">
-          <span></span>
-          <span></span>
-          <span></span>
+        <h1 class="cover__title letter-spacing-extended">
+          <span class="aligned-text letter-spacing-extended">оно</span>
+          <span class="aligned-text aligned-text_center letter-spacing-extended">тебе</span>
+          <span class="aligned-text aligned-text_right letter-spacing-extended no-letter-spacing">надо</span>
         </h1>
-
+        <div class="cover__description">
+          <h2 class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
       <section class="lots"></section>
       <section class="about"></section>
     </main>
