--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title letter-spacing-extended">
-          <span class="aligned-text letter-spacing-extended">оно</span>
+          <span class="aligned-text letter-spacing-extended">он о</span>
           <span class="aligned-text aligned-text_center letter-spacing-extended"
-            >тебе</span
+            >теб е</span
           >
           <span
             class="aligned-text aligned-text_right letter-spacing-extended no-letter-spacing"
-            >надо</span
+            >н адо</span
           >
         </h1>
         <div class="cover__description">
@@ -116,11 +116,13 @@
         <div class="about__column">
           <div class="about__logo">
             <img
-              class="about__logo-image"
-              src="./images/logo-white.svg"
-              alt="Оно тебе надо"
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Оно тебе надо"
             />
           </div>
+        </div>  
+        <div class="about__column about__column-description">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
@@ -151,7 +153,7 @@
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item footer__menu-link_active">
+          <li class="footer__menu-link_active">
             <a class="footer__menu-link" href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item">
