Чистовая шапка страницы

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title letter-spacing-extended">
-          <span class="aligned-text letter-spacing-extended">он о</span>
+          <span class="aligned-text letter-spacing-extended">о но</span>
           <span class="aligned-text aligned-text_center letter-spacing-extended"
             >теб е</span
           >
@@ -175,7 +175,11 @@
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/vk.svg" alt="ВК" />
+              <img 
+                class="footer__social-icon" 
+                src="./images/vk.svg" 
+                alt="ВК" 
+              />
             </a>
           </li>
           <li class="footer__social-list-item">
