Завершена секция с карточками

--- a/index.html
+++ b/index.html
@@ -40,15 +40,24 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover__title letter-spacing-extended">
-          <span class="aligned-text letter-spacing-extended">о но</span>
-          <span class="aligned-text aligned-text_center letter-spacing-extended"
-            >теб е</span
-          >
-          <span
-            class="aligned-text aligned-text_right letter-spacing-extended no-letter-spacing"
-            >н адо</span
-          >
+        <h1 class="cover__title">
+          <span class="aligned-text-left letter-spacing-extended">он
+            <span class="letter-spacing-extended">
+              о
+            </span>
+          </span>
+          <span class="aligned-text aligned-text_center letter-spacing-extended">
+            теб
+            <span class="letter-spacing-extended">
+              е
+            </span>
+          </span>
+          <span class="aligned-text aligned-text_right letter-spacing-extended no-letter-spacing">
+            <span class="letter-spacing-extended">
+              н
+            </span>
+            адо
+          </span>
         </h1>
         <div class="cover__description">
           <h2 class="cover__description-text">
