--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link header__link_active" href="#0">главная</a>
+            <a class="header__link" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -41,19 +41,19 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text-left letter-spacing-extended">он
+          <span class="aligned-text-left">он
             <span class="letter-spacing-extended">
               о
             </span>
           </span>
-          <span class="aligned-text aligned-text_center letter-spacing-extended">
+          <span class="aligned-text aligned-text_center">
             теб
             <span class="letter-spacing-extended">
               е
             </span>
           </span>
-          <span class="aligned-text aligned-text_right letter-spacing-extended no-letter-spacing">
-            <span class="letter-spacing-extended">
+          <span class="aligned-text aligned-text_right">
+            <span class="letter-spacing-extended no-letter-spacing">
               н
             </span>
             адо
