--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link" href="#0">главная</a>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link-active" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -41,28 +41,31 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text-left">он
+          <span class="aligned-text aligned-text-left">о
             <span class="letter-spacing-extended">
-              о
+              но
             </span>
           </span>
           <span class="aligned-text aligned-text_center">
-            теб
+            те
             <span class="letter-spacing-extended">
-              е
+              бе
             </span>
           </span>
           <span class="aligned-text aligned-text_right">
-            <span class="letter-spacing-extended no-letter-spacing">
+            <span class="letter-spacing-extended">
               н
             </span>
-            адо
+            ад
+            <span class="no-letter-spacing">
+              о
+            </span>
           </span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </h2>
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
@@ -133,15 +136,15 @@
         </div>  
         <div class="about__column about__column-description">
           <h2 class="about__title">Об аукционе</h2>
-          <div class="about__text">
-            <p>
+          <div>
+            <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p>
+            <p class="about__text about__text-last-paragraph">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -162,8 +165,8 @@
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-link_active">
-            <a class="footer__menu-link" href="#0">главная</a>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#0">посмотреть лоты</a>
